<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp">


    <androidx.cardview.widget.CardView
        android:id="@+id/product_image_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="12dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/product_image"
                android:scaleType="centerCrop"
                android:src="@drawable/terrex_free_hiker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/product_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxEms="10"
        android:text="@string/product_title"
        app:layout_constraintTop_toBottomOf="@id/product_price"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/product_price"
        android:layout_marginVertical="12dp"
        app:layout_constraintTop_toBottomOf="@id/product_image_card"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold" />


</androidx.constraintlayout.widget.ConstraintLayout>